header section style done

--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -112,8 +112,214 @@ li {
 /*for wrapper*/
 .wrapper {
   max-width: 1360px;
-  width: 62.35%;
+  width: 60%;
   margin: 0 auto;
+}
+
+.wrapper--header {
+  width: 100%;
+}
+
+.header__top {
+  padding: 2px 20% 6px;
+  border-bottom: 1px solid rgba(155, 155, 155, 0.3);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-align: space-between;
+  -ms-flex-align: space-between;
+  justify-content: space-between;
+}
+.header__top .contact-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-preferred-size: 40%;
+  flex-basis: 40%;
+}
+.header__top .contact-info__list {
+  padding: 0 1% 0 3%;
+  border-right: 1px solid rgba(155, 155, 155, 0.3);
+  -ms-flex-preferred-size: 34%;
+  flex-basis: 34%;
+}
+.header__top .contact-info__list:first-child {
+  padding-left: 0;
+}
+.header__top .contact-info__list:last-child {
+  border-right: none;
+  padding-right: 0;
+}
+.header__top .contact-info__list_link {
+  color: #A1AAA7;
+  display: block;
+  font-size: 10px;
+}
+.header__top .contact-info__list_link::before {
+  margin-right: 3%;
+  color: #3ED9A5;
+  font-family: "FontAwesome";
+  font-size: 11px;
+  float: left;
+}
+.header__top .contact-info__list_link--tel::before {
+  content: "\f095";
+}
+.header__top .contact-info__list_link--mail::before {
+  content: "\f0e0";
+}
+.header__top .header-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-align: flex-end;
+  -ms-flex-align: flex-end;
+  justify-content: flex-end;
+  -ms-flex-preferred-size: 40%;
+  flex-basis: 40%;
+}
+.header__top .header-social__list {
+  margin: 0 1.5% 0 3%;
+}
+.header__top .header-social__list_link {
+  font-size: 10px;
+  text-indent: -9999px;
+}
+.header__top .header-social__list_link::before {
+  color: #A1AAA7;
+  font-family: "Font Awesome 5 Brands";
+  float: left;
+  text-indent: 0;
+}
+.header__top .header-social__list_link--facebook::before {
+  content: "\f39e";
+}
+.header__top .header-social__list_link--twitter::before {
+  content: "\f099";
+}
+.header__top .header-social__list_link--dribbble::before {
+  content: "\f17d";
+}
+.header__top .header-social__list_link--instagram::before {
+  content: "\f16d";
+}
+
+.header-bottom {
+  padding: 8px 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-align: space-between;
+  -ms-flex-align: space-between;
+  justify-content: space-between;
+}
+.header-bottom__left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-preferred-size: 38%;
+  flex-basis: 38%;
+}
+.header-bottom__left .logo__link {
+  color: #000;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: capitalize;
+}
+.header-bottom__left .search {
+  margin-left: 4%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-preferred-size: 66%;
+  flex-basis: 66%;
+}
+.header-bottom__left .search__cta {
+  padding: 8px 8px;
+  border: 1px solid rgba(155, 155, 155, 0.3);
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border-right: none;
+  color: #3ED9A5;
+  font-size: 11px;
+  text-indent: -9999px;
+}
+.header-bottom__left .search__cta::before {
+  content: "\f002";
+  font-family: "FontAwesome";
+  float: left;
+  text-indent: 0;
+}
+.header-bottom__left .search__keyword {
+  padding: 7px 6%;
+  border: 1px solid rgba(155, 155, 155, 0.3);
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  font-size: 12px;
+}
+.header-bottom__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-align: flex-end;
+  -ms-flex-align: flex-end;
+  justify-content: flex-end;
+  -ms-flex-preferred-size: 60%;
+  flex-basis: 60%;
+}
+.header-bottom__right .hamburger {
+  display: none;
+}
+.header-bottom__right .navbar {
+  -ms-flex-preferred-size: 75%;
+  flex-basis: 75%;
+}
+.header-bottom__right .navbar__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-align: flex-end;
+  -ms-flex-align: flex-end;
+  justify-content: flex-end;
+}
+.header-bottom__right .navbar__menu_list {
+  margin-right: 6%;
+}
+.header-bottom__right .navbar__menu_list_link {
+  color: #A1AAA7;
+  font-size: 12px;
+}
+.header-bottom__right .auth__cta {
+  padding: 8px 18px;
+  border-radius: 4px;
+  background-color: #3ED9A5;
+  color: #fff;
+  font-size: 10px;
+  text-transform: capitalize;
 }
 
 /*# sourceMappingURL=style.css.map */
