--- a/assets/sass/common/_variable.scss
+++ b/assets/sass/common/_variable.scss
@@ -2,6 +2,7 @@
 $primary-color: #3ED9A5;
 $secondary-color: #2E3B38;
 $tertiary-color: #4E59FE;
+$primary-dark: #00b377;
 $black: #000;
 $white: #fff;
 $pink: #F73C84;
@@ -9,6 +10,7 @@ $text-color: #A1AAA7;
 $footer-icon-bg: #26312F;
 $top-cta: #A8ADAC;
 $border-color: rgba(155, 155, 155, .3);
+$shadow-color: rgba(0, 0, 0, 0.1);
 
 // responsive devices breakpoints
 $laptop : 1024px;
