haelth center section style done

--- a/assets/sass/common/_variable.scss
+++ b/assets/sass/common/_variable.scss
@@ -11,6 +11,7 @@ $footer-icon-bg: #26312F;
 $top-cta: #A8ADAC;
 $border-color: rgba(155, 155, 155, .3);
 $shadow-color: rgba(0, 0, 0, 0.1);
+$heading-color: #353738;
 
 // responsive devices breakpoints
 $laptop : 1024px;
