--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,5 +1,6 @@
 @import 'common/reset';
 @import 'common/variable';
 @import 'common/mixin';
+@import 'common/common-style';
 @import 'common/header';
 @import 'pages/home';
