--- a/assets/sass/common/_variable.scss
+++ b/assets/sass/common/_variable.scss
@@ -13,6 +13,7 @@ $border-color: rgba(155, 155, 155, .3);
 $shadow-color: rgba(0, 0, 0, 0.1);
 $shadow-hover: rgba(0, 0, 0, 0.5);
 $heading-color: #353738;
+$yellowish: #F5F9F6;
 
 // responsive devices breakpoints
 $laptop : 1024px;
