--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -686,5 +686,58 @@ li {
   padding: 24px 0 57px;
   text-align: center;
 }
+.home .appointment .wrapper--appointment {
+  width: 38%;
+}
+.home .appointment .main-heading {
+  text-align: center;
+}
+.home .appointment .form {
+  padding-bottom: 56px;
+  margin-top: 40px;
+}
+.home .appointment .form__container--top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-align: space-between;
+  -ms-flex-align: space-between;
+  justify-content: space-between;
+}
+.home .appointment .form__container--top .form__container_group {
+  -ms-flex-preferred-size: 48%;
+  flex-basis: 48%;
+}
+.home .appointment .form__container--top .form__container_group_content {
+  width: 91%;
+  padding: 9px 8px;
+  border: 1px solid rgba(155, 155, 155, 0.3);
+  margin-bottom: 10px;
+  font-size: 12px;
+}
+.home .appointment .form__container--top .form__container_group_content--dropdown {
+  width: 100%;
+  background-color: #fff;
+}
+.home .appointment .form__container--top .form__container_group_content::placeholder {
+  color: #A1AAA7;
+}
+.home .appointment .form__container--bottom .form__container_group_content {
+  width: 96%;
+  border: 1px solid rgba(155, 155, 155, 0.3);
+  font-size: 12px;
+}
+.home .appointment .form__container--bottom .form__container_group_content--textarea {
+  width: 96.5%;
+  height: 100px;
+  border: 1px solid rgba(155, 155, 155, 0.3);
+  font-size: 12px;
+}
+.home .appointment .form__container_cta {
+  border: none;
+  outline: none;
+}
 
 /*# sourceMappingURL=style.css.map */
